--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-02 17:06+0800\n"
+"POT-Creation-Date: 2022-08-03 16:53+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -505,12 +505,6 @@ msgstr "Idioma"
 
 msgid "*"
 msgstr "*"
-
-msgid "G-code files can not be loaded with models together!"
-msgstr "¡Los archivos de código G no pueden cargarse con los modelos juntos!"
-
-msgid "G-code loading"
-msgstr "Carga del código G"
 
 msgid "Select a G-code file:"
 msgstr "Seleccione un archivo de código G:"
@@ -1304,9 +1298,6 @@ msgstr ""
 msgid "Colour"
 msgstr "Colour"
 
-msgid "SN"
-msgstr "SN"
-
 msgid ""
 "Nozzle\n"
 "Temperature"
@@ -1323,6 +1314,9 @@ msgstr "min"
 #, boost-format
 msgid "The input value should be greater than %1% and less than %2%"
 msgstr "The input value should be greater than %1% and less than %2%"
+
+msgid "SN"
+msgstr "SN"
 
 msgid "Confirm"
 msgstr "Confirmar"
@@ -2031,8 +2025,11 @@ msgstr "Añadir placa"
 msgid "Auto orient"
 msgstr "Orientar automáticamente"
 
-msgid "Auto arrange"
-msgstr "Auto posicionamiento"
+msgid "Arrange all objects"
+msgstr "Ordenar todos los objetos"
+
+msgid "Arrange objects on selected plates"
+msgstr "Colocar los objetos en las placas seleccionadas"
 
 msgid "Split to objects"
 msgstr "Partir en varias piezas"
@@ -2975,6 +2972,12 @@ msgstr "Importar geometría solo"
 msgid "Only one G-code file can be opened at the same time."
 msgstr "Sólo se puede abrir un archivo de código G al mismo tiempo."
 
+msgid "G-code loading"
+msgstr "Carga del código G"
+
+msgid "G-code files can not be loaded with models together!"
+msgstr "¡Los archivos de código G no pueden cargarse con los modelos juntos!"
+
 msgid "Can not add models when in preview mode!"
 msgstr "Unable to add models in preview mode"
 
@@ -3445,9 +3448,15 @@ msgstr ""
 msgid "The printer is busy on other print job"
 msgstr "The printer is busy with another print job."
 
+#, c-format, boost-format
 msgid ""
-"The filament index exceeds the AMS's slot count and cannot send the print "
-"job."
+"Filament index %s exceeds the number of AMS slots. Please update the printer "
+"firmware to support AMS slot assignment."
+msgstr ""
+
+msgid ""
+"Filament index exceeds the number of AMS slots. Please update the printer "
+"firmware to support AMS slot assignment."
 msgstr ""
 
 msgid ""
@@ -3463,6 +3472,17 @@ msgid ""
 msgstr ""
 "Please click each filament above to specify its mapping AMS slot before "
 "sending the print job"
+
+#, c-format, boost-format
+msgid ""
+"Filament index %s does not match the filament in AMS slot %s. Please update "
+"the printer firmware to support AMS slot assignment."
+msgstr ""
+
+msgid ""
+"Filament index does not match the filament in AMS slot. Please update the "
+"printer firmware to support AMS slot assignment."
+msgstr ""
 
 msgid ""
 "The printer firmware only supports sequential mapping of filament => AMS "
@@ -4005,50 +4025,17 @@ msgstr "Lista de objetos"
 msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
 msgstr "Importación de datos geométricos desde archivos STL/STEP/3MF/OBJ/AMF."
 
-msgid "Select all objects"
-msgstr "Seleccionar todos los objetos"
-
 msgid "Copy to clipboard"
 msgstr "Copiar al portapapeles"
 
 msgid "Paste from clipboard"
 msgstr "Pegar desde el portapapeles"
 
-msgid "Camera view - Default"
-msgstr "Vista de la cámara - Por defecto"
-
-msgid "Camera view - Top"
-msgstr "Vista de la cámara Superior"
-
-msgid "Camera view - Bottom"
-msgstr "Vista de la cámara - Parte inferior"
-
-msgid "Camera view - Front"
-msgstr "Vista de la cámara - Frontal"
-
-msgid "Camera view - Behind"
-msgstr "Vista de la cámara - Posterior"
-
-msgid "Camera Angle - Left side"
-msgstr "Ángulo de la cámara - Lado izquierdo"
-
-msgid "Camera Angle - Right side"
-msgstr "Ángulo de la cámara - Lado derecho"
-
-msgid "keyboard 1-9: set filament for object/part"
-msgstr "teclado 1-9: ajustar el filamento para el objeto/pieza"
-
 msgid "Show keyboard shortcuts list"
 msgstr "Muestra lista de atajos de teclado"
 
 msgid "Global shortcuts"
 msgstr "Atajos globales"
-
-msgid "Arrange all objects"
-msgstr "Ordenar todos los objetos"
-
-msgid "Arrange objects on selected plates"
-msgstr "Colocar los objetos en las placas seleccionadas"
 
 msgid ""
 "Auto orientates selected objects or all objects.If there are selected "
@@ -4068,11 +4055,32 @@ msgstr ""
 "objetos seleccionados, sólo orienta los seleccionados.En caso contrario, "
 "orientará todos los objetos del disco actual."
 
+msgid "Collapse/Expand the sidebar"
+msgstr "Ocultar/Expandir barra lateral"
+
+msgid "⌘+Any arrow"
+msgstr "⌘+Cualquier tecla"
+
+msgid "Movement in camera space"
+msgstr "Movimiento en el espacio de la cámara"
+
+msgid "⌥+Left mouse button"
+msgstr ""
+
+msgid "Select a part"
+msgstr ""
+
 msgid "⌘+Left mouse button"
 msgstr ""
 
 msgid "Select multiple objects"
 msgstr "Seleccionar varios objetos"
+
+msgid "Ctrl+Any arrow"
+msgstr "Ctrl+Cualquier flecha"
+
+msgid "Alt+Left mouse button"
+msgstr ""
 
 msgid "Ctrl+Left mouse button"
 msgstr ""
@@ -4113,17 +4121,32 @@ msgstr "Mayúsculas+Cualquier flecha"
 msgid "Movement step set to 1 mm"
 msgstr "Paso de movimiento configurado a 1 mm"
 
-msgid "⌘+Any arrow"
-msgstr "⌘+Cualquier tecla"
+msgid "keyboard 1-9: set filament for object/part"
+msgstr "teclado 1-9: ajustar el filamento para el objeto/pieza"
 
-msgid "Movement in camera space"
-msgstr "Movimiento en el espacio de la cámara"
+msgid "Camera view - Default"
+msgstr "Vista de la cámara - Por defecto"
 
-msgid "Ctrl+Any arrow"
-msgstr "Ctrl+Cualquier flecha"
+msgid "Camera view - Top"
+msgstr "Vista de la cámara Superior"
 
-msgid "Collapse/Expand the sidebar"
-msgstr "Ocultar/Expandir barra lateral"
+msgid "Camera view - Bottom"
+msgstr "Vista de la cámara - Parte inferior"
+
+msgid "Camera view - Front"
+msgstr "Vista de la cámara - Frontal"
+
+msgid "Camera view - Behind"
+msgstr "Vista de la cámara - Posterior"
+
+msgid "Camera Angle - Left side"
+msgstr "Ángulo de la cámara - Lado izquierdo"
+
+msgid "Camera Angle - Right side"
+msgstr "Ángulo de la cámara - Lado derecho"
+
+msgid "Select all objects"
+msgstr "Seleccionar todos los objetos"
 
 msgid "Plater"
 msgstr "Plataforma"
@@ -5879,9 +5902,6 @@ msgstr ""
 "modelo sólido en una impresión de una sola pared con capas inferiores "
 "sólidas. El modelo final generado no tiene costura"
 
-msgid "Timelapse without toolhead"
-msgstr ""
-
 msgid ""
 "Record timelapse video of printing without showing toolhead. In this mode "
 "the toolhead docks near the excess chute at each layer change, and then a "
@@ -6470,6 +6490,9 @@ msgstr "Soporte: arreglar huecos en la capa %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Soporte: propagar ramas en la capa %d"
+
+#~ msgid "Auto arrange"
+#~ msgstr "Auto posicionamiento"
 
 #~ msgid "Filaments Selection"
 #~ msgstr "Selección de filamentos"
