--- a/bbl/i18n/sv/BambuStudio_sv.po
+++ b/bbl/i18n/sv/BambuStudio_sv.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-02 17:06+0800\n"
+"POT-Creation-Date: 2022-08-03 16:53+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -496,12 +496,6 @@ msgstr "Språk"
 
 msgid "*"
 msgstr "*"
-
-msgid "G-code files can not be loaded with models together!"
-msgstr "G-kod filer och modeller kan inte laddas tillsammans!!"
-
-msgid "G-code loading"
-msgstr "Laddar G-kod"
 
 msgid "Select a G-code file:"
 msgstr "Välj en G-kod fil:"
@@ -1290,9 +1284,6 @@ msgstr ""
 msgid "Colour"
 msgstr "Colour"
 
-msgid "SN"
-msgstr "SN"
-
 msgid ""
 "Nozzle\n"
 "Temperature"
@@ -1309,6 +1300,9 @@ msgstr "min"
 #, boost-format
 msgid "The input value should be greater than %1% and less than %2%"
 msgstr "The input value should be greater than %1% and less than %2%"
+
+msgid "SN"
+msgstr "SN"
 
 msgid "Confirm"
 msgstr "Acceptera"
@@ -2004,8 +1998,11 @@ msgstr "Lägg till byggplata"
 msgid "Auto orient"
 msgstr "Auto placera"
 
-msgid "Auto arrange"
-msgstr "Auto arrangera"
+msgid "Arrange all objects"
+msgstr "Ordna alla objekt"
+
+msgid "Arrange objects on selected plates"
+msgstr "Ordna alla objekt på vald platta"
 
 msgid "Split to objects"
 msgstr "Dela upp till objekt"
@@ -2937,6 +2934,12 @@ msgstr "Importera endast geometrin"
 msgid "Only one G-code file can be opened at the same time."
 msgstr "Endast en G-kod kan öppnas åt gången."
 
+msgid "G-code loading"
+msgstr "Laddar G-kod"
+
+msgid "G-code files can not be loaded with models together!"
+msgstr "G-kod filer och modeller kan inte laddas tillsammans!!"
+
 msgid "Can not add models when in preview mode!"
 msgstr "Unable to add models in preview mode"
 
@@ -3394,9 +3397,15 @@ msgstr ""
 msgid "The printer is busy on other print job"
 msgstr "The printer is busy with another print job."
 
+#, c-format, boost-format
 msgid ""
-"The filament index exceeds the AMS's slot count and cannot send the print "
-"job."
+"Filament index %s exceeds the number of AMS slots. Please update the printer "
+"firmware to support AMS slot assignment."
+msgstr ""
+
+msgid ""
+"Filament index exceeds the number of AMS slots. Please update the printer "
+"firmware to support AMS slot assignment."
 msgstr ""
 
 msgid ""
@@ -3412,6 +3421,17 @@ msgid ""
 msgstr ""
 "Please click each filament above to specify its mapping AMS slot before "
 "sending the print job"
+
+#, c-format, boost-format
+msgid ""
+"Filament index %s does not match the filament in AMS slot %s. Please update "
+"the printer firmware to support AMS slot assignment."
+msgstr ""
+
+msgid ""
+"Filament index does not match the filament in AMS slot. Please update the "
+"printer firmware to support AMS slot assignment."
+msgstr ""
 
 msgid ""
 "The printer firmware only supports sequential mapping of filament => AMS "
@@ -3958,50 +3978,17 @@ msgstr "Objektlista"
 msgid "Import geometry data from STL/STEP/3MF/OBJ/AMF files."
 msgstr "Importera geometri data från STL/STEP/3MF/OBJ/AMF filer."
 
-msgid "Select all objects"
-msgstr "Välj alla objekt"
-
 msgid "Copy to clipboard"
 msgstr "Kopiera till urklipp"
 
 msgid "Paste from clipboard"
 msgstr "Klistra in ifrån urklipp"
 
-msgid "Camera view - Default"
-msgstr "Kamera vy - Standard"
-
-msgid "Camera view - Top"
-msgstr "Kamera vy - Topp"
-
-msgid "Camera view - Bottom"
-msgstr "Kamera vy - Botten"
-
-msgid "Camera view - Front"
-msgstr "Kamera vy - Fram"
-
-msgid "Camera view - Behind"
-msgstr "Kamera vy - Bakom"
-
-msgid "Camera Angle - Left side"
-msgstr "Kamera vy - Vänster sida"
-
-msgid "Camera Angle - Right side"
-msgstr "Kamera vy - Höger sida"
-
-msgid "keyboard 1-9: set filament for object/part"
-msgstr "tangentbord 1-9: fastställer filament för objekt/del"
-
 msgid "Show keyboard shortcuts list"
 msgstr "Visa tangentbordets genvägs lista"
 
 msgid "Global shortcuts"
 msgstr "Övergripande genvägar"
-
-msgid "Arrange all objects"
-msgstr "Ordna alla objekt"
-
-msgid "Arrange objects on selected plates"
-msgstr "Ordna alla objekt på vald platta"
 
 msgid ""
 "Auto orientates selected objects or all objects.If there are selected "
@@ -4019,11 +4006,32 @@ msgstr ""
 "Auto placera valda objekt eller alla objekt. Om det finns valda objekt så "
 "placeras endast dem. Alternativt så placeras alla objekt på nuvarande disk."
 
+msgid "Collapse/Expand the sidebar"
+msgstr "Dölj/Visa meny"
+
+msgid "⌘+Any arrow"
+msgstr ""
+
+msgid "Movement in camera space"
+msgstr "Rörelse i kamera område"
+
+msgid "⌥+Left mouse button"
+msgstr ""
+
+msgid "Select a part"
+msgstr ""
+
 msgid "⌘+Left mouse button"
 msgstr ""
 
 msgid "Select multiple objects"
 msgstr "Välj flera objekt"
+
+msgid "Ctrl+Any arrow"
+msgstr ""
+
+msgid "Alt+Left mouse button"
+msgstr ""
 
 msgid "Ctrl+Left mouse button"
 msgstr ""
@@ -4064,17 +4072,32 @@ msgstr ""
 msgid "Movement step set to 1 mm"
 msgstr "Rörelse steg är vald till 1mm"
 
-msgid "⌘+Any arrow"
-msgstr ""
+msgid "keyboard 1-9: set filament for object/part"
+msgstr "tangentbord 1-9: fastställer filament för objekt/del"
 
-msgid "Movement in camera space"
-msgstr "Rörelse i kamera område"
+msgid "Camera view - Default"
+msgstr "Kamera vy - Standard"
 
-msgid "Ctrl+Any arrow"
-msgstr ""
+msgid "Camera view - Top"
+msgstr "Kamera vy - Topp"
 
-msgid "Collapse/Expand the sidebar"
-msgstr "Dölj/Visa meny"
+msgid "Camera view - Bottom"
+msgstr "Kamera vy - Botten"
+
+msgid "Camera view - Front"
+msgstr "Kamera vy - Fram"
+
+msgid "Camera view - Behind"
+msgstr "Kamera vy - Bakom"
+
+msgid "Camera Angle - Left side"
+msgstr "Kamera vy - Vänster sida"
+
+msgid "Camera Angle - Right side"
+msgstr "Kamera vy - Höger sida"
+
+msgid "Select all objects"
+msgstr "Välj alla objekt"
 
 msgid "Plater"
 msgstr "Plätering/Förgyllning"
@@ -5779,9 +5802,6 @@ msgstr ""
 "konturen och förvandlar en solid modell till en enkelväggig utskrift med "
 "solida bottenlager. Den slutgiltligt genererade modellen har ingen söm"
 
-msgid "Timelapse without toolhead"
-msgstr ""
-
 msgid ""
 "Record timelapse video of printing without showing toolhead. In this mode "
 "the toolhead docks near the excess chute at each layer change, and then a "
@@ -5929,8 +5949,8 @@ msgid ""
 "interface is Concentric"
 msgstr ""
 "Linje mönster för support gränssnittsytan .Standardmönstret för olösligt "
-"(material) support gränssnittet är Räta medan standardmönstret för lösligt"
-"(material) stödgränssnittet är koncentriskt"
+"(material) support gränssnittet är Räta medan standardmönstret för "
+"lösligt(material) stödgränssnittet är koncentriskt"
 
 msgid "Base pattern spacing"
 msgstr "Basens mönster mellanrum"
@@ -6354,6 +6374,9 @@ msgstr "Support: fix holes at layer %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: propagate branches at layer %d"
+
+#~ msgid "Auto arrange"
+#~ msgstr "Auto arrangera"
 
 #~ msgid "Filaments Selection"
 #~ msgstr "Filament Val"
